fix portrait display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -283,7 +283,7 @@ header {
 }
 
 header .intro-text {
-    padding-top: 300px;
+    padding-top: 400px;
     padding-bottom: 50px;
     color: #fff;
 }
